[tool.poetry]
name = "docs"
version = "2024.01.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.15"
pymdown-extensions = "^10.7"
mkdocs-render-swagger-plugin = "^0.1.1"
mkdocs-include-dir-to-nav = "^1.2.0"
mike = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
